--- a/ALLIN.html
+++ b/ALLIN.html
@@ -1310,7 +1310,9 @@ function copyHtml(){
 <body>
 <h2 style="margin-left: 40px; margin-right: 20px; margin-top:20px; color:blue; "><i><b>ALLIN</b> -<b>A</b>nnotation of sequence a<b>L</b>ignment and structura<b>L</b> prote<b>I</b>n visualizatio<b>N</b>- </i></h2> 
    	
-<h4 style="margin-left: 40px; margin-right: 20px; margin-top:10px;">Tool for generation of annotated aligns with structural visualization. Please cite ....</h4><br>
+<h4 style="margin-left: 40px; margin-right: 20px; margin-top:10px;">Tool for generation of annotated aligns with structural visualization. Please cite  <a href="https://doi.org/10.1085/jgp.202413635" target="_blank">Picollo & Pusch, ALLIN: a tool for annotation of a protein alignment combined with structural
+visualization. 2024. <i>J Gen Physiol</i>, doi: 10.1085/jgp.202413635 </a> 
+</h4><br>
 <table >
 	<tr>
 		<td>
